{
  "version": 4,
  "terraform_version": "1.2.3",
  "serial": 729,
  "lineage": "faa386af-c3e7-1ae8-25fb-cb0790e23e4c",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2022-06-29T17:16:25.167-07:00",
            "deny": [],
            "description": "Firewall rule to allow HTTP traffic on target instances",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/appsbroker-web-application/global/firewalls/app-network-http-allow",
            "log_config": [],
            "name": "app-network-http-allow",
            "network": "https://www.googleapis.com/compute/v1/projects/appsbroker-web-application/global/networks/app-network",
            "priority": 1000,
            "project": "appsbroker-web-application",
            "self_link": "https://www.googleapis.com/compute/v1/projects/appsbroker-web-application/global/firewalls/app-network-http-allow",
            "source_ranges": [],
            "source_service_accounts": [],
            "source_tags": [
              "web"
            ],
            "target_service_accounts": [],
            "target_tags": [
              "allow-http"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.app-network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_global_address",
      "name": "private_ip_address",
      "provider": "provider[\"registry.terraform.io/hashicorp/google-beta\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "10.3.0.0",
            "address_type": "INTERNAL",
            "creation_timestamp": "2022-06-29T17:16:29.271-07:00",
            "id": "projects/appsbroker-web-application/global/addresses/app-db-ip-address",
            "label_fingerprint": "42WmSpB8rSM=",
            "name": "app-db-ip-address",
            "network": "https://www.googleapis.com/compute/v1/projects/appsbroker-web-application/global/networks/app-network",
            "prefix_length": 16,
            "project": "appsbroker-web-application",
            "purpose": "VPC_PEERING",
            "self_link": "https://www.googleapis.com/compute/v1/projects/appsbroker-web-application/global/addresses/app-db-ip-address"
          },
          "dependencies": [
            "google_compute_network.app-network"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "app-network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "id": "projects/appsbroker-web-application/global/networks/app-network",
            "mtu": 0,
            "name": "app-network",
            "project": "appsbroker-web-application",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/appsbroker-web-application/global/networks/app-network"
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router",
      "name": "app-router",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-06-29T17:16:25.812-07:00",
            "encrypted_interconnect_router": false,
            "id": "projects/appsbroker-web-application/regions/europe-west2/routers/app-network-router",
            "name": "app-network-router",
            "network": "https://www.googleapis.com/compute/v1/projects/appsbroker-web-application/global/networks/app-network",
            "project": "appsbroker-web-application",
            "region": "europe-west2",
            "self_link": "https://www.googleapis.com/compute/v1/projects/appsbroker-web-application/regions/europe-west2/routers/app-network-router"
          },
          "dependencies": [
            "google_compute_network.app-network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router_nat",
      "name": "app-nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_endpoint_independent_mapping": true,
            "icmp_idle_timeout_sec": 30,
            "id": "appsbroker-web-application/europe-west2/app-network-router/app-network-nat",
            "min_ports_per_vm": 0,
            "name": "app-network-nat",
            "nat_ip_allocate_option": "AUTO_ONLY",
            "project": "appsbroker-web-application",
            "region": "europe-west2",
            "router": "app-network-router",
            "source_subnetwork_ip_ranges_to_nat": "ALL_SUBNETWORKS_ALL_IP_RANGES",
            "tcp_established_idle_timeout_sec": 1200,
            "tcp_transitory_idle_timeout_sec": 30,
            "udp_idle_timeout_sec": 30
          },
          "dependencies": [
            "google_compute_network.app-network",
            "google_compute_router.app-router"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "app-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-06-29T17:16:26.021-07:00",
            "gateway_address": "10.10.10.1",
            "id": "projects/appsbroker-web-application/regions/europe-west2/subnetworks/app-subnet",
            "ip_cidr_range": "10.10.10.0/24",
            "name": "app-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/appsbroker-web-application/global/networks/app-network",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "appsbroker-web-application",
            "purpose": "PRIVATE",
            "region": "europe-west2",
            "self_link": "https://www.googleapis.com/compute/v1/projects/appsbroker-web-application/regions/europe-west2/subnetworks/app-subnet",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.app-network"
          ]
        }
      ]
    },
    {
      "module": "module.lb-http",
      "mode": "managed",
      "type": "google_compute_backend_service",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google-beta\"]",
      "instances": [
        {
          "index_key": "default",
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/appsbroker-web-application/regions/europe-west2/instanceGroups/app-flask-vm-mig",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 0
              }
            ],
            "connection_draining_timeout_sec": 300,
            "creation_timestamp": "2022-06-29T17:33:48.251-07:00",
            "enable_cdn": false,
            "fingerprint": "_-CpKW6hOLs=",
            "health_checks": [
              "https://www.googleapis.com/compute/v1/projects/appsbroker-web-application/global/healthChecks/app-network-lb-hc-default"
            ],
            "id": "projects/appsbroker-web-application/global/backendServices/app-network-lb-backend-default",
            "load_balancing_scheme": "EXTERNAL",
            "log_config": [
              {
                "enable": true,
                "sample_rate": 1
              }
            ],
            "name": "app-network-lb-backend-default",
            "port_name": "http",
            "project": "appsbroker-web-application",
            "protocol": "HTTP",
            "self_link": "https://www.googleapis.com/compute/v1/projects/appsbroker-web-application/global/backendServices/app-network-lb-backend-default",
            "session_affinity": "NONE",
            "timeout_sec": 10
          },
          "dependencies": [
            "google_compute_network.app-network",
            "google_secret_manager_secret.app-secret",
            "google_secret_manager_secret_version.app-secret-version",
            "google_service_account.service_account",
            "google_service_networking_connection.private_vpc_connection",
            "google_sql_database_instance.app-sql",
            "module.lb-http.google_compute_health_check.default",
            "module.mig.data.google_compute_zones.available",
            "module.mig.google_compute_health_check.http",
            "module.mig.google_compute_health_check.https",
            "module.mig.google_compute_health_check.tcp",
            "module.mig.google_compute_region_instance_group_manager.mig",
            "module.mig_template.google_compute_instance_template.tpl",
            "random_password.mysql_root"
          ]
        }
      ]
    },
    {
      "module": "module.lb-http",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "default-hc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2022-06-29T17:33:36.078-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/appsbroker-web-application/global/firewalls/app-network-lb-hc-0",
            "log_config": [],
            "name": "app-network-lb-hc-0",
            "network": "https://www.googleapis.com/compute/v1/projects/appsbroker-web-application/global/networks/app-network",
            "priority": 1000,
            "project": "appsbroker-web-application",
            "self_link": "https://www.googleapis.com/compute/v1/projects/appsbroker-web-application/global/firewalls/app-network-lb-hc-0",
            "source_ranges": [
              "130.211.0.0/22",
              "35.191.0.0/16"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "app-network-router",
              "app-subnet"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.app-network",
            "google_compute_router.app-router",
            "google_compute_subnetwork.app-subnet",
            "google_secret_manager_secret.app-secret",
            "google_secret_manager_secret_version.app-secret-version",
            "google_service_account.service_account",
            "google_service_networking_connection.private_vpc_connection",
            "google_sql_database_instance.app-sql",
            "module.mig.data.google_compute_zones.available",
            "module.mig.google_compute_health_check.http",
            "module.mig.google_compute_health_check.https",
            "module.mig.google_compute_health_check.tcp",
            "module.mig.google_compute_region_instance_group_manager.mig",
            "module.mig_template.google_compute_instance_template.tpl",
            "random_password.mysql_root"
          ]
        }
      ]
    },
    {
      "module": "module.lb-http",
      "mode": "managed",
      "type": "google_compute_global_address",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "address": "34.111.3.75",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2022-06-29T17:16:25.230-07:00",
            "id": "projects/appsbroker-web-application/global/addresses/app-network-lb-address",
            "name": "app-network-lb-address",
            "prefix_length": 0,
            "project": "appsbroker-web-application",
            "self_link": "https://www.googleapis.com/compute/v1/projects/appsbroker-web-application/global/addresses/app-network-lb-address"
          }
        }
      ]
    },
    {
      "module": "module.lb-http",
      "mode": "managed",
      "type": "google_compute_global_forwarding_rule",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "projects/appsbroker-web-application/global/forwardingRules/app-network-lb",
            "ip_address": "34.111.3.75",
            "ip_protocol": "TCP",
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL",
            "name": "app-network-lb",
            "port_range": "80",
            "project": "appsbroker-web-application",
            "self_link": "https://www.googleapis.com/compute/v1/projects/appsbroker-web-application/global/forwardingRules/app-network-lb",
            "target": "https://www.googleapis.com/compute/v1/projects/appsbroker-web-application/global/targetHttpProxies/app-network-lb-http-proxy"
          },
          "dependencies": [
            "google_compute_network.app-network",
            "google_secret_manager_secret.app-secret",
            "google_secret_manager_secret_version.app-secret-version",
            "google_service_account.service_account",
            "google_service_networking_connection.private_vpc_connection",
            "google_sql_database_instance.app-sql",
            "module.lb-http.google_compute_backend_service.default",
            "module.lb-http.google_compute_global_address.default",
            "module.lb-http.google_compute_health_check.default",
            "module.lb-http.google_compute_target_http_proxy.default",
            "module.lb-http.google_compute_url_map.default",
            "module.lb-http.google_compute_url_map.https_redirect",
            "module.mig.data.google_compute_zones.available",
            "module.mig.google_compute_health_check.http",
            "module.mig.google_compute_health_check.https",
            "module.mig.google_compute_health_check.tcp",
            "module.mig.google_compute_region_instance_group_manager.mig",
            "module.mig_template.google_compute_instance_template.tpl",
            "random_password.mysql_root"
          ]
        }
      ]
    },
    {
      "module": "module.lb-http",
      "mode": "managed",
      "type": "google_compute_target_http_proxy",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-06-29T17:34:22.268-07:00",
            "id": "projects/appsbroker-web-application/global/targetHttpProxies/app-network-lb-http-proxy",
            "name": "app-network-lb-http-proxy",
            "project": "appsbroker-web-application",
            "proxy_bind": false,
            "proxy_id": 2232371137140052321,
            "self_link": "https://www.googleapis.com/compute/v1/projects/appsbroker-web-application/global/targetHttpProxies/app-network-lb-http-proxy",
            "url_map": "https://www.googleapis.com/compute/v1/projects/appsbroker-web-application/global/urlMaps/app-network-lb-url-map"
          },
          "dependencies": [
            "google_compute_network.app-network",
            "google_secret_manager_secret.app-secret",
            "google_secret_manager_secret_version.app-secret-version",
            "google_service_account.service_account",
            "google_service_networking_connection.private_vpc_connection",
            "google_sql_database_instance.app-sql",
            "module.lb-http.google_compute_backend_service.default",
            "module.lb-http.google_compute_health_check.default",
            "module.lb-http.google_compute_url_map.default",
            "module.lb-http.google_compute_url_map.https_redirect",
            "module.mig.data.google_compute_zones.available",
            "module.mig.google_compute_health_check.http",
            "module.mig.google_compute_health_check.https",
            "module.mig.google_compute_health_check.tcp",
            "module.mig.google_compute_region_instance_group_manager.mig",
            "module.mig_template.google_compute_instance_template.tpl",
            "random_password.mysql_root"
          ]
        }
      ]
    },
    {
      "module": "module.lb-http",
      "mode": "managed",
      "type": "google_compute_url_map",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-06-29T17:34:10.651-07:00",
            "default_route_action": [],
            "default_service": "https://www.googleapis.com/compute/v1/projects/appsbroker-web-application/global/backendServices/app-network-lb-backend-default",
            "default_url_redirect": [],
            "description": "",
            "fingerprint": "Ns0cG4Vh7eo=",
            "header_action": [],
            "host_rule": [],
            "id": "projects/appsbroker-web-application/global/urlMaps/app-network-lb-url-map",
            "map_id": 8636850464254677357,
            "name": "app-network-lb-url-map",
            "path_matcher": [],
            "project": "appsbroker-web-application",
            "self_link": "https://www.googleapis.com/compute/v1/projects/appsbroker-web-application/global/urlMaps/app-network-lb-url-map",
            "test": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.app-network",
            "google_secret_manager_secret.app-secret",
            "google_secret_manager_secret_version.app-secret-version",
            "google_service_account.service_account",
            "google_service_networking_connection.private_vpc_connection",
            "google_sql_database_instance.app-sql",
            "module.lb-http.google_compute_backend_service.default",
            "module.lb-http.google_compute_health_check.default",
            "module.mig.data.google_compute_zones.available",
            "module.mig.google_compute_health_check.http",
            "module.mig.google_compute_health_check.https",
            "module.mig.google_compute_health_check.tcp",
            "module.mig.google_compute_region_instance_group_manager.mig",
            "module.mig_template.google_compute_instance_template.tpl",
            "random_password.mysql_root"
          ]
        }
      ]
    }
  ]
}